# emskaffolden

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
emskaffolden/: __main__.py  cli.py  files.py  skaffold.py
emskaffolden/builtin-templates/django-app/: default.vars.yaml  development.vars.yaml  example.vars.yaml  ingress.in.yaml  skaffold.in.yaml  template.in.yaml
emskaffolden/builtin-templates/django-app/gunicorn/: deployment.in.yaml  secret.in.yaml  service.in.yaml
emskaffolden/builtin-templates/django-app/postgres/: deployment.in.yaml  pvc.in.yaml  secret.in.yaml  service.in.yaml
emskaffolden/builtin-templates/node-app/: default.vars.yaml  development.vars.yaml  example.vars.yaml  ingress.in.yaml  template.in.yaml
emskaffolden/builtin-templates/node-app/node/: deployment.in.yaml  secret.in.yaml  service.in.yaml
emskaffolden/builtin-templates/node-app/postgres/: deployment.in.yaml  pvc.in.yaml  secret.in.yaml  service.in.yaml
example/: .gitignore  skaffold.in.yaml
example/kubernetes/: default.vars.yaml  deployment.in.yaml
